--- a/styles.css
+++ b/styles.css
@@ -108,8 +108,8 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: flex-start;
-      -ms-flex-pack: flex-start;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
           justify-content: flex-start;
   height: 90%;
   -webkit-box-align: center;
