--- a/styles.css
+++ b/styles.css
@@ -414,6 +414,25 @@ footer {
     -ms-grid-row: 1;
     -ms-grid-column: 1;
     grid-area: header;
+    -ms-grid-row: 1;
+    -ms-grid-column: 1;
+    width: 100%;
+    grid-area: header;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    height: 90%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
   }
 
   .phone-img {
