--- a/styles.css
+++ b/styles.css
@@ -386,9 +386,9 @@ footer {
     display: -ms-flexbox;
     display: flex;
     flex-direction: row;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     height: 100%;
   }
 }
