--- a/styles.css
+++ b/styles.css
@@ -56,10 +56,12 @@ a:active {
 }
 
 .logo-img {
-  height: 60%;
+  height: auto;
   width: auto;
+  max-width: 50%;
   margin-top: auto;
   margin-bottom: auto;
+  margin-right: 1%;
 }
 
 .phone-img {
