--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@ a:active {
   height: auto;
   width: auto;
   max-width: 50%;
+  max-height: 50%;
   margin-top: auto;
   margin-bottom: auto;
   margin-right: 1%;
